<resources>
    <string name="app_name">Smart Tunnel</string>
    <string name="home" translatable="false">Home</string>
    <string name="configs" translatable="false">Configs</string>
    <string name="logs" translatable="false">Logs</string>
    <string name="apps" translatable="false">Apps</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="connecting_">Connecting…</string>
    <string name="connected">You are CONNECTED !</string>
    <string name="add_config" translatable="false">Add New Config</string>
    <string name="undo_delete_config" translatable="false">Undo delete config ?</string>
    <string name="undo" translatable="false">Undo</string>
    <string name="add_ssh_config_title" translatable="false">Add SSH Config</string>
    <string name="save" translatable="false">Save</string>
    <string name="export" translatable="false">Export</string>
    <string name="simple" translatable="false">Simple</string>
    <string name="advanced" translatable="false">Advanced</string>
    <string name="server_address" translatable="false">Server Address</string>
    <string name="server_port" translatable="false">Port</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="private_key" translatable="false">Private Key</string>
    <string name="paste_key" translatable="false">Paste Key</string>
    <string name="choose_key" translatable="false">Choose Key</string>
    <string name="udpgw_port" translatable="false">UDPGW Port</string>
    <string name="jumper" translatable="false">Jumper Detail</string>
    <string name="direct" translatable="false">Direct</string>
    <string name="websocket" translatable="false">Websocket</string>
    <string name="ssl_tls" translatable="false">SSL/TLS</string>
    <string name="ssh_proxy" translatable="false">SSH Proxy</string>
    <string name="clipboard_is_empty" translatable="false">Clipboard is empty</string>
    <string name="config_name" translatable="false">Config Name</string>
    <string name="key_is_invalid" translatable="false">The key is invalid</string>
    <string name="private_key_text_note" translatable="false">You pasted private key</string>
    <string name="private_key_file_note" translatable="false">Private key file : %s</string>
    <string name="enter_config_name" translatable="false">Enter config name</string>
    <string name="enter_server_address" translatable="false">Enter Server Address</string>
    <string name="enter_server_port" translatable="false">Enter Server Port</string>
    <string name="enter_username" translatable="false">Enter Username</string>
    <string name="enter_password" translatable="false">Enter Password</string>
    <string name="private_key_is_empty" translatable="false">Private key is empty</string>
    <string name="can_not_read_config" translatable="false">Can not read config</string>
    <string name="can_not_save_config" translatable="false">Can not save config</string>
    <string name="config_list_empty_message">You have no config. To add one, click + button or for import external config, click import button on toolbar</string>
    <string name="import_config" translatable="false">Import Config</string>
    <string name="waiting_for_network">Waiting for network to online !</string>
    <string name="selecet_config">You not selected any config</string>
    <string name="search" translatable="false">Search</string>
    <string name="selected_app_use_vpn">Selected apps use VPN</string>
    <string name="selected_app_dont_use_vpn">Selected apps don\'t use vpn</string>
    <string name="proxy" translatable="false">Proxy</string>
    <string name="dns" translatable="false">DNS</string>
    <string name="dns_settins" translatable="false">DNS Settings</string>
    <string name="proxy_settings" translatable="false">Proxy Settings</string>
    <string name="none" translatable="false">None</string>
    <string name="http_https" translatable="false">HTTP/HTTPS Proxy</string>
    <string name="google" translatable="false">Google</string>
    <string name="cloudflare" translatable="false">Cloudflare</string>
    <string name="custom" translatable="false">Custom</string>
    <string name="dns2" translatable="false">DNS 2</string>
    <string name="dns1" translatable="false">DNS 1</string>
    <string name="server_is_locked" translatable="false">Server is locked</string>
    <string name="server_port_is_locked" translatable="false">Server port is locked</string>
    <string name="username_is_locked" translatable="false">Username is locked</string>
    <string name="password_is_locked" translatable="false">Password is locked</string>
    <string name="export_config" translatable="false">Export Config</string>
    <string name="name" translatable="false">Name</string>
    <string name="note" translatable="false">Note</string>
    <string name="lock_all" translatable="false">Lock All</string>
    <string name="lock_server_address" translatable="false">Lock Server Address</string>
    <string name="lock_server_port" translatable="false">Lock Server Port</string>
    <string name="lock_username" translatable="false">Lock Username</string>
    <string name="lock_password" translatable="false">Lock Password</string>
    <string name="lock_private_key" translatable="false">Lock Private Key</string>
    <string name="lock_connection_type" translatable="false">Lock Connection Type</string>
    <string name="enter_file_name" translatable="false">Enter file name</string>
    <string name="config_saved_in_S" translatable="false">Config saved in %s</string>
    <string name="file_exists_message">File with this name is already exists. Do you want to replace it?</string>
    <string name="file_exists_title">Override file</string>
    <string name="replace">Replace</string>
    <string name="cancel">Cancel</string>
    <string name="error_in_export_file" translatable="false">Error in exporting file</string>
    <string name="directory_to_save" translatable="false">Directory To Save</string>
    <string name="directory_to_save_message" translatable="false">In the next screen please select witch directory you want to save configs. This directory will be use to save next other configs.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="config_saved" translatable="false">Config saved</string>
    <string name="config_not_supported" translatable="false">Config not supported</string>
    <string name="error_parsing_config" translatable="false">Error in parsing config</string>
    <string name="keyChainAccessError" translatable="false">KeyChain Access error: %s</string>
    <string name="keychain_access" translatable="false">Cannot access the Android Keychain Certificates. This can be caused by a firmware upgrade or by restoring a backup of the app/app settings. Please edit the VPN and reselect the certificate under basic settings to recreate the permission to access the certificate.</string>
    <string name="jelly_keystore_alphanumeric_bug" translatable="false">Some versions of Android 4.1 have problems if the name of the keystore certificate contains non alphanumeric characters (like spaces, underscores or dashes). Try to reimport the certificate without special characters</string>
    <string name="no_keystore_cert_selected" translatable="false">You must select a User certificate</string>
    <string name="no_ca_cert_selected" translatable="false">You must select a CA certificate or enable peer fingerprint check</string>
    <string name="deprecated_tls_remote" translatable="false">Config uses option tls-remote that was deprecated in 2.3 and finally removed in 2.4</string>
    <string name="ipv4_format_error" translatable="false">Error parsing the IPv4 address</string>
    <string name="custom_route_format_error" translatable="false">Error parsing the custom routes</string>
    <string name="missing_tlsauth" translatable="false">tls-auth file is missing</string>
    <string name="missing_certificates" translatable="false">Missing user certificate or user certifcate key file</string>
    <string name="remote_no_server_selected" translatable="false">You need to define and enable at least one remote server.</string>
    <string name="openvpn3_nostatickeys" translatable="false">The OpenVPN 3 C++ implementation does not support static keys. Please change to OpenVPN 2.x under general settings.</string>
    <string name="openvpn3_pkcs12" translatable="false">Using PKCS12 files directly with OpenVPN 3 C++ implementation is not supported. Please import the pkcs12 files into the Android keystore or change to OpenVPN 2.x under general settings.</string>
    <string name="openvpn3_socksproxy" translatable="false">OpenVPN 3 C++ implementation does not support connecting via Socks proxy</string>
    <string name="error_orbot_and_proxy_options" translatable="false">Cannot use extra http-proxy-option statement and Orbot integration at the same time</string>
    <string name="no_orbotfound" translatable="false">Orbot application cannot be found. Please install Orbot or use manual Socks v5 integration.</string>
    <string name="bf_cbc_requires_legacy" translatable="false">Profiles uses BF-CBC which depends on OpenSSL legacy provider (not enabled).</string>
    <string name="no_error_found" translatable="false">No error found</string>
    <string name="pkcs12_file_encryption_key" translatable="false">PKCS12 File Encryption Key</string>
    <string name="private_key_password" translatable="false">Private Key Password</string>
    <string name="error_extapp_sign" translatable="false">Error signing with external authenticator app (%3$s): %1$s: %2$s</string>
    <string name="error_rsa_sign" translatable="false">Error signing with Android keystore key %1$s: %2$s</string>
    <string name="keychain_nocacert" translatable="false">No CA Certificate returned while reading from Android keystore. Authentication will probably fail.</string>
    <string name="state_noprocess" translatable="false">Not running</string>
    <string name="minidump_generated" translatable="false">OpenVPN crashed unexpectedly. Please consider using the send Minidump option in the main menu</string>
    <string name="tcp" translatable="false">TCP</string>
    <string name="udp" translatable="false">UDP</string>
    <string name="choose_open_vpn_profile" translatable="false">Choose OpenVPN profile</string>
    <string name="open_vpn_profile" translatable="false">OpenVPN profile</string>
    <string name="ssh_settings" translatable="false">SSH settings</string>
    <string name="getproxy_error" translatable="false">Error getting proxy settings: %s</string>
    <string name="notification_bg_name" translatable="false">Smart Tunnel notification status</string>
    <string name="notification_bg_description" translatable="false">State of connection of vpn</string>
    <string name="cannotparsecert" translatable="false">Cannot display certificate information</string>
    <string name="mobile_info" translatable="false">mobile info %s</string>
    <string name="ip_not_cidr" translatable="false">Got interface information %1$s and %2$s, assuming second address is peer address of remote. Using /32 netmask for local IP. Mode given by OpenVPN is \"%3$s\".</string>
    <string name="route_not_cidr" translatable="false">Cannot make sense of %1$s and %2$s as IP route with CIDR netmask, using /32 as netmask.</string>
    <string name="route_not_netip" translatable="false">Corrected route %1$s/%2d to %3$s/%2$s</string>
    <string name="user_remote_socks_server" translatable="false">Use remote socks server</string>
    <string name="socks_address" translatable="false">Socks Address</string>
    <string name="socks_port" translatable="false">Socks port</string>
</resources>