<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWindowBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/export_config"
            app:menu="@menu/has_save_menu"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/txtNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                android:layout_marginTop="8dp"
                android:labelFor="@id/edtServerAddress"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:inputType="text"
                    android:paddingTop="12dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/txtNoteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/note"
                android:layout_marginTop="8dp"
                android:labelFor="@id/edtServerAddress"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtNoteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:inputType="textMultiLine"
                    android:paddingTop="12dp"
                    android:lines="5"
                    android:gravity="top"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chbLockAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_all"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chbLockServerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_server_address"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chbLockServerPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_server_port"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chbLockUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_username"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chbLockPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_password"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chbLockPrivateKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_private_key"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chbLockConnectionType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_connection_type"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>