<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.AddSSHConfigActivity">
<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_ssh_config_title"
            android:textAppearance="@style/TitleTextAppearance"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export"
            android:textColor="@color/colorActiveText"
            android:textAllCaps="false"
            android:layout_gravity="center_vertical"
            style="@style/TextButtonsStyle"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/colorActiveText"
            android:textAllCaps="false"
            android:layout_gravity="center_vertical"
            style="@style/TextButtonsStyle"
            />
    </LinearLayout>
</com.google.android.material.appbar.AppBarLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/sshConfigFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        />
   <com.google.android.material.tabs.TabLayout
       android:id="@+id/tabLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       >
       <com.google.android.material.tabs.TabItem
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/simple"
           />
       <com.google.android.material.tabs.TabItem
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/advanced"
           />
   </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>