<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
<RadioGroup
    android:id="@+id/dnsRadioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    >
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radGoogleDns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RadioButtonStyle"
        android:text="@string/google"
        />
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radCloudflareDns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RadioButtonStyle"
        android:text="@string/cloudflare"
        />
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radCustomDns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RadioButtonStyle"
        android:text="@string/custom"
        />
</RadioGroup>
    <LinearLayout
        android:id="@+id/customDnsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible"
        >
        <TextView
            android:id="@+id/txtDns1Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dns1"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edtServerAddress"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtDns1Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDns1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingTop="12dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/txtDns2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dns2"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edtServerAddress"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtDns2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDns2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingTop="12dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>